# Brainiary-Rust

./: Cargo.toml  diesel.toml  env_sample
migrations/2025-05-26-054820_create_users/: up.sql
migrations/2025-06-09-062425_add_role_to_users/: up.sql
src/: main.rs  schema.rs
src/auth/: generator.rs  handler.rs  mod.rs  model.rs
src/db/: db.rs
src/modules/resume/: generator.rs  handlers.rs  mod.rs
src/resume/: generator.rs  handler.rs  handlers.rs  mod.rs  model.rs
