[package]
name = "Brainiary"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web= "4"
actix-cors = "0.7.1"
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.14", features = ["json"] }
dotenv = "0.15"
jsonwebtoken = "9"
uuid = { version = "1.17.0", features = ["v4", "serde"]}
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "uuid", "chrono"]}
env_logger = "0.11.8"
log = "0.4"
futures-util = "0.3"